--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                       продукта.
                     </li>
                     <li class="levels__item-list-elem levels__item-list-elem--select">
-                      Потенциал заработка 5 - 10 000 $
+                      Потенциал заработка <br />
+                      5&nbsp;-&nbsp;10&nbsp;000&nbsp;$
                     </li>
                   </ul>
                 </div>
@@ -225,7 +226,8 @@
                       попробуете новые инструменты и технологии на управляемой аудитории
                     </li>
                     <li class="levels__item-list-elem levels__item-list-elem--select">
-                      Потенциал заработка 20 - 50 000 $
+                      Потенциал заработка <br />
+                      20&nbsp;-&nbsp;50&nbsp;000&nbsp;$
                     </li>
                   </ul>
                   <ul class="levels__item-list levels__item-list--2">
@@ -294,7 +296,8 @@
                       Вы научитесь запускать инфопродукты от и до
                     </li>
                     <li class="levels__item-list-elem levels__item-list-elem--select">
-                      Потенциал заработка 100 000 $ +
+                      Потенциал заработка <br />
+                      100&nbsp;000&nbsp;$&nbsp;+
                     </li>
                   </ul>
                 </div>
@@ -487,6 +490,8 @@
                   участников <br />
                   со мной
                 </div>
+                <div class="block-3__mob"></div>
+
                 <div class="content__text">
                   <p>
                     В хорошо известном мессенджере Телеграм, мы создадим общий чат всех участников
@@ -652,51 +657,93 @@
           <div class="moduls__text">Вы неизбежно сделаете следующее:</div>
           <div class="moduls__tabs">
             <div class="moduls__tabs-btns">
-              <button class="moduls__tabs-btn" data-tab-btn="modul-1" data-scroll-smooth="moduls">
-                <div class="moduls__tabs-btn-num">01</div>
-                <div class="moduls__tabs-btn-info">
-                  <div class="moduls__tabs-btn-title">Модуль</div>
-                  <div class="moduls__tabs-btn-text">Быстрые Деньги (Быстрый Результат)</div>
-                </div>
-              </button>
-              <button class="moduls__tabs-btn" data-tab-btn="modul-2" data-scroll-smooth="moduls">
-                <div class="moduls__tabs-btn-num">02</div>
-                <div class="moduls__tabs-btn-info">
-                  <div class="moduls__tabs-btn-title">Модуль</div>
-                  <div class="moduls__tabs-btn-text">Продвижение своего Media в Интернете</div>
-                </div>
-              </button>
-              <button class="moduls__tabs-btn" data-tab-btn="modul-3" data-scroll-smooth="moduls">
-                <div class="moduls__tabs-btn-num">03</div>
-                <div class="moduls__tabs-btn-info">
-                  <div class="moduls__tabs-btn-title">Модуль</div>
-                  <div class="moduls__tabs-btn-text">Продажи на 1 000 000 $$$</div>
-                </div>
-              </button>
-              <button class="moduls__tabs-btn" data-tab-btn="modul-4" data-scroll-smooth="moduls">
-                <div class="moduls__tabs-btn-num">04</div>
-                <div class="moduls__tabs-btn-info">
-                  <div class="moduls__tabs-btn-title">Модуль</div>
-                  <div class="moduls__tabs-btn-text">Трафик</div>
-                </div>
-              </button>
-              <button class="moduls__tabs-btn" data-tab-btn="modul-5" data-scroll-smooth="moduls">
-                <div class="moduls__tabs-btn-num">05</div>
-                <div class="moduls__tabs-btn-info">
-                  <div class="moduls__tabs-btn-title">Модуль</div>
-                  <div class="moduls__tabs-btn-text">Продукт</div>
-                </div>
-              </button>
-              <button class="moduls__tabs-btn" data-tab-btn="modul-6" data-scroll-smooth="moduls">
-                <div class="moduls__tabs-btn-num">06</div>
-                <div class="moduls__tabs-btn-info">
-                  <div class="moduls__tabs-btn-title">Модуль</div>
-                  <div class="moduls__tabs-btn-text">Сервисы и Команда</div>
-                </div>
-              </button>
+              <div class="moduls__tabs-btn-wrapper">
+                <button
+                  id="moduls-btn-1"
+                  class="moduls__tabs-btn"
+                  data-tab-btn="modul-1"
+                  data-scroll-smooth="moduls-1"
+                >
+                  <div class="moduls__tabs-btn-num">01</div>
+                  <div class="moduls__tabs-btn-info">
+                    <div class="moduls__tabs-btn-title">Модуль</div>
+                    <div class="moduls__tabs-btn-text">Быстрые Деньги (Быстрый Результат)</div>
+                  </div>
+                </button>
+              </div>
+              <div class="moduls__tabs-btn-wrapper">
+                <button
+                  id="moduls-btn-2"
+                  class="moduls__tabs-btn"
+                  data-tab-btn="modul-2"
+                  data-scroll-smooth="moduls-2"
+                >
+                  <div class="moduls__tabs-btn-num">02</div>
+                  <div class="moduls__tabs-btn-info">
+                    <div class="moduls__tabs-btn-title">Модуль</div>
+                    <div class="moduls__tabs-btn-text">Продвижение своего Media в Интернете</div>
+                  </div>
+                </button>
+              </div>
+              <div class="moduls__tabs-btn-wrapper">
+                <button
+                  id="moduls-btn-3"
+                  class="moduls__tabs-btn"
+                  data-tab-btn="modul-3"
+                  data-scroll-smooth="moduls-3"
+                >
+                  <div class="moduls__tabs-btn-num">03</div>
+                  <div class="moduls__tabs-btn-info">
+                    <div class="moduls__tabs-btn-title">Модуль</div>
+                    <div class="moduls__tabs-btn-text">Продажи на 1 000 000 $$$</div>
+                  </div>
+                </button>
+              </div>
+              <div class="moduls__tabs-btn-wrapper">
+                <button
+                  id="moduls-btn-4"
+                  class="moduls__tabs-btn"
+                  data-tab-btn="modul-4"
+                  data-scroll-smooth="moduls-4"
+                >
+                  <div class="moduls__tabs-btn-num">04</div>
+                  <div class="moduls__tabs-btn-info">
+                    <div class="moduls__tabs-btn-title">Модуль</div>
+                    <div class="moduls__tabs-btn-text">Трафик</div>
+                  </div>
+                </button>
+              </div>
+              <div class="moduls__tabs-btn-wrapper">
+                <button
+                  id="moduls-btn-5"
+                  class="moduls__tabs-btn"
+                  data-tab-btn="modul-5"
+                  data-scroll-smooth="moduls-5"
+                >
+                  <div class="moduls__tabs-btn-num">05</div>
+                  <div class="moduls__tabs-btn-info">
+                    <div class="moduls__tabs-btn-title">Модуль</div>
+                    <div class="moduls__tabs-btn-text">Продукт</div>
+                  </div>
+                </button>
+              </div>
+              <div class="moduls__tabs-btn-wrapper">
+                <button
+                  id="moduls-btn-6"
+                  class="moduls__tabs-btn"
+                  data-tab-btn="modul-6"
+                  data-scroll-smooth="moduls-6"
+                >
+                  <div class="moduls__tabs-btn-num">06</div>
+                  <div class="moduls__tabs-btn-info">
+                    <div class="moduls__tabs-btn-title">Модуль</div>
+                    <div class="moduls__tabs-btn-text">Сервисы и Команда</div>
+                  </div>
+                </button>
+              </div>
             </div>
-            <div class="moduls__tabs-contents" id="moduls">
-              <div class="moduls__tabs-content" data-tab-content="modul-1">
+            <div class="moduls__tabs-contents">
+              <div class="moduls__tabs-content" data-tab-content="modul-1" id="moduls-1">
                 <div class="moduls__tabs-content-item">
                   <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
                   <div class="moduls__tabs-content-text">
@@ -747,7 +794,7 @@
                   </div>
                 </div>
               </div>
-              <div class="moduls__tabs-content" data-tab-content="modul-2">
+              <div class="moduls__tabs-content" data-tab-content="modul-2" id="moduls-2">
                 <div class="moduls__tabs-content-item">
                   <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
                   <div class="moduls__tabs-content-text">
@@ -826,7 +873,7 @@
                   </div>
                 </div>
               </div>
-              <div class="moduls__tabs-content" data-tab-content="modul-3">
+              <div class="moduls__tabs-content" data-tab-content="modul-3" id="moduls-3">
                 <div class="moduls__tabs-content-item">
                   <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
                   <div class="moduls__tabs-content-text">
@@ -885,7 +932,7 @@
                   </div>
                 </div>
               </div>
-              <div class="moduls__tabs-content" data-tab-content="modul-4">
+              <div class="moduls__tabs-content" data-tab-content="modul-4" id="moduls-4">
                 <div class="moduls__tabs-content-item">
                   <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
                   <div class="moduls__tabs-content-text">
@@ -936,7 +983,7 @@
                   </div>
                 </div>
               </div>
-              <div class="moduls__tabs-content" data-tab-content="modul-5">
+              <div class="moduls__tabs-content" data-tab-content="modul-5" id="moduls-5">
                 <div class="moduls__tabs-content-item">
                   <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
                   <div class="moduls__tabs-content-text">
@@ -983,7 +1030,7 @@
                   </div>
                 </div>
               </div>
-              <div class="moduls__tabs-content" data-tab-content="modul-6">
+              <div class="moduls__tabs-content" data-tab-content="modul-6" id="moduls-6">
                 <div class="moduls__tabs-content-item">
                   <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
                   <div class="moduls__tabs-content-text">
