--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,8 @@
               <div class="about__item-img"><img src="./img/about/items/4.png" alt="" /></div>
               <ul class="about__list">
                 <li>
-                  Рекордный запуск “Особой Премиальной Программы” на <span>1 000 000 долларов</span>
+                  Рекордный запуск “Особой Премиальной Программы” на
+                  <span>1&nbsp;000&nbsp;000 долларов</span>
                 </li>
               </ul>
             </div>
