edit video block

--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,91 @@
             <div class="program__video-title">Посмотрите, как это было:</div>
             <div class="program__video-slider">
               <div class="swiper-wrapper">
-                <a
+                <div class="program__video-item swiper-slide">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/KwUIXoFF40s?si=h9cJb7pbK2YZc_Ud"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <div class="program__video-item swiper-slide">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/EReZoxekYZE"
+                    title="Реалити Шоу   Татьяна Хавро"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <div class="program__video-item swiper-slide">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/PRBbH7pLu6o?si=VLgwkStJ9okHHFe5"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <div class="program__video-item swiper-slide">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/5--ftkB4nqM"
+                    title="Реалити Шоу   Сергей Касаткин и Анна Артемчук"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <div class="program__video-item swiper-slide">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/hwY8a2p3sw4?si=qQQ-al0n1m7g8HHN"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <div class="program__video-item swiper-slide">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/xMYA7odySAg?si=ZF2pVDHXmTtazVlJ"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <div class="program__video-item swiper-slide">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    src="https://www.youtube.com/embed/yoxiUdac5ZM"
+                    title="Реалити Шоу   Ирина Грибоедова"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <!-- <a
                   href="./videos/1.MP4"
                   data-fancybox="videos"
                   class="program__video-item swiper-slide"
@@ -1857,7 +1941,7 @@
                   data-fancybox="videos"
                   class="program__video-item swiper-slide"
                   ><img src="./img/program/videos/7.png" alt=""
-                /></a>
+                /></a> -->
               </div>
             </div>
             <div class="program__slider-arrows">
